# ndsdisasm

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  disasm.c  main.c  ndsdisasm.h  pokediamond.cfg
