CMAKE_MINIMUM_REQUIRED(VERSION 3.10)
ADD_SUBDIRECTORY(capstone)
PROJECT(ndsdisasm)
ADD_EXECUTABLE(ndsdisasm main.c disasm.c)
ADD_DEPENDENCIES(ndsdisasm capstone-static)
TARGET_INCLUDE_DIRECTORIES(ndsdisasm PRIVATE capstone/include)
TARGET_LINK_DIRECTORIES(ndsdisasm PRIVATE ${CMAKE_BINARY_DIR}/capstone)
TARGET_LINK_LIBRARIES(ndsdisasm PRIVATE capstone)
TARGET_COMPILE_DEFINITIONS(ndsdisasm PRIVATE CAPSTONE_VERMAJ=4 CAPSTONE_VERMIN=0 CAPSTONE_REVISN=2)
